[project]
name = "learn-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "langchain-community",
    "langchain[openai]",
    "langgraph",
]

# ---------------------------
# Development dependencies
# ---------------------------
[dependency-groups]
dev = [
    # --- Testing ---
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "coverage",

    # --- Code Quality ---
    "ruff",
    "black",
    "isort",
    "mypy",
    "pydocstyle",

    # --- Dev Utilities ---
    "pre-commit",
    "ipython",
    "rich",
    "python-dotenv",
    "debugpy",

    # --- Documentation ---
    "mkdocs",
    "mkdocs-material",
]

# ---------------------------
# Build system
# ---------------------------
[build-system]
requires = ["setuptools", "wheel", "uv"]
build-backend = "setuptools.build_meta"
